--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saúde Mental e Tecnologia</title>
-    <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <div id="interface">
@@ -13,14 +13,6 @@
                 <h1>SAÚDE MENTAL E TECNOLOGIA</h1>
             </hgroup>
         </header>
-        <nav id="menu">
-            <div id="menuToggle">☰</div>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="documentario.html">DOCUMENTÁRIO</a></li>
-            </ul>
-        </nav>
-
         <figcaption id="fotoPrincipal">
             <img src="_imagens/imgSaudeMental.jpg"/>
         </figcaption>
